# public-PROD-Sovet-O5-Back

./: .env.example  .gitignore  .pylintrc  Dockerfile  docker-compose.yml  pyproject.toml
mongo_entrypoint/: init-db.sh
sessions/: log  my_account-lp.session  my_account.session
src/: main.py
src/analytics/: Dockerfile  __init__.py  pyproject.toml  tgstat.py  userbot.py
src/bot/: main_locales.py  main_router.py
src/bot/helpers/: __init__.py  avatars.py
src/database/: __init__.py  client.py  models.py
src/database/methods/: __init__.py  admins_ids.py  constraints.py  reactions.py  special_data.py  teams.py  users.py  users_next.py
src/miniapp_api/: Dockerfile  helpers.py  main.py  pyproject.toml
src/miniapp_api/routers/: admin.py  avatars.py  likes.py  reactions.py  soft_skills.py  teams.py  users.py
