[tool.poetry]
name = "analytics"
version = "0.1.0"
description = ""
authors = ["Mark Fomin <mark@difhel.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyrogram = "^2.0.106"
requests = "^2.31.0"
bs4 = "^0.0.2"
pymongo = "^4.6.3"
pydantic = "^2.6.4"
numpy = "^1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
