[tool.poetry]
name = "miniapp-api"
version = "0.1.0"
description = ""
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
uvicorn = {extras = ["standart"], version = "^0.29.0"}
pymongo = "^4.6.2"
python-multipart = "^0.0.9"
aiogram = "^3.4.1"
pyrogram = "^2.0.106"
requests = "^2.31.0"
bs4 = "^0.0.2"
aiohttp = "^3.9.3"
numpy = "^1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
